; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress.c_test_persistent_timeout.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress.c_test_persistent_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32 }
%struct.event = type { i32 }

@global_base = common dso_local global i32 0, align 4
@EV_TIMEOUT = common dso_local global i32 0, align 4
@EV_PERSIST = common dso_local global i32 0, align 4
@periodic_timeout_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_persistent_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_persistent_timeout() #0 {
  %1 = alloca %struct.timeval, align 4
  %2 = alloca %struct.event, align 4
  %3 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  %4 = call i32 @evutil_timerclear(%struct.timeval* %1)
  %5 = getelementptr inbounds %struct.timeval, %struct.timeval* %1, i32 0, i32 0
  store i32 10000, i32* %5, align 4
  %6 = load i32, i32* @global_base, align 4
  %7 = load i32, i32* @EV_TIMEOUT, align 4
  %8 = load i32, i32* @EV_PERSIST, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @periodic_timeout_cb, align 4
  %11 = call i32 @event_assign(%struct.event* %2, i32 %6, i32 -1, i32 %9, i32 %10, i32* %3)
  %12 = call i32 @event_add(%struct.event* %2, %struct.timeval* %1)
  %13 = call i32 (...) @event_dispatch()
  %14 = call i32 @event_del(%struct.event* %2)
  ret void
}

declare dso_local i32 @evutil_timerclear(%struct.timeval*) #1

declare dso_local i32 @event_assign(%struct.event*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @event_add(%struct.event*, %struct.timeval*) #1

declare dso_local i32 @event_dispatch(...) #1

declare dso_local i32 @event_del(%struct.event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
